test/errors/struct_bad_default_value.haste
const S = struct {
    x: int = "hello";
};
